/*
Copyright Â© 2020 Alessandro Segala (@ItalyPaleAle)

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published
by the Free Software Foundation, version 3 of the License.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package statiko;

option go_package = "github.com/statiko-dev/statiko/shared/proto";

// Message containing the health of a node
message NodeHealth {
  // Name of the node
  string node_name = 1;

  // State version
  uint64 version = 2;

  // Health of the web server
  message WebServer {
    // Web server is healthy
    bool healthy = 1;
  }
  WebServer web_server = 5;

  // Sync activity
  message Sync {
    // Sync is running
    bool running = 1;

    // Last sync time (UNIX timestamp)
    int64 last_sync = 2;

    // Last sync error (optional)
    string sync_error = 3;
  }
  Sync sync = 6;

  // Sites
  message Site {
    // Domain name
    string domain = 1;
    // Deployed app (optional)
    string app = 2;
    // App error (optional)
    string error = 3;
  }
  repeated Site sites = 10;

  // Internal use only - do not use
  string _error = 2000;
}
